fixed calendar modal spacing for mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
+.Cal__Container__root {
+    width: 100% !important;
+}
+
 .tableFixHead { overflow-x: scroll; }
 
 /* Just common table stuff. Really. */
